# sealir

./: .gitignore  LICENSE  README.html  README.md  conda-lock.dev.yml  conda-project.yml  conda_environment.yml  demo_geglu_approx_mlir.html  genindex.html  intro.html  lambda.html  notebooks.html  objects.inv  parser.py  parser_rvsdg.py  pyproject.toml  rvsdg.html  rvsdg_mermaid_visualizer.py  search.html  searchindex.js  test_egglog_new.py  test_egglog_solve.py  test_rvsdg_new.py  traverse.html  virtual-packages.yml
.github/workflows/: build.yaml  prtester.yml
_sources/: demo_geglu_approx_mlir.md  intro.md  lambda.md  traverse.md
autodocs/: ase.py.md  egg_utils.py.md  grammar.py.md  graphviz_support.py.md  itertools.py.md  lam.py.md  llvm_pyapi_backend.py.md  mlir_backend.py.md  prettyprinter.py.md  rewriter.py.md  scf.py.md
autodocs/eggview/: __init__.py.md
autodocs/eqsat/: egraph_utils.py.md  rvsdg_convert.py.md  rvsdg_eqsat.py.md  rvsdg_extract.py.md  rvsdg_extract_details.py.md
autodocs/prettyformat/: html_format.py.md
autodocs/py/: canonical.py.md
autodocs/rvsdg/: evaluating.py.md  grammar.py.md  restructuring.py.md  scfg_to_sexpr.py.md
autodocs/tests/: test_lam.py.md  (+11 more)
notebooks/: README.md  _config.yml  _toc.yml  demo_geglu_approx_mlir.md  intro.md  lambda.md  rvsdg.md
sealir/: __init__.py  ase.py  dispatchtable.py  egg_utils.py  grammar.py  graphviz_support.py  itertools.py  lam.py  llvm_pyapi_backend.py  matcher.py  mlir_backend.py  prettyprinter.py  rewriter.py  rvsdg.py  rvsdg_conns.py  scf.py
sealir_model_explorer_adapters/: pyproject.toml
(+44 files in other folders)
