
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "sealir"
version = "0.0.1"
description = "S-Expression And Lambda Intemediate Representation (SEALIR)"
authors = [
    {name = "sklam", email = "na@na.na"}
]
license = {text = "BSD-2-Clause"}
readme = "README.md"

[tool.setuptools.packages.find]
include = ["sealir"]