[build-system]
requires = ["hatchling", "hatch-conda-build"]
build-backend = "hatchling.build"


[project]
name = "sealir"
version = "0.0.1"
description = "S-Expression Array for Lightweight Immutable Representation (SealIR)"
authors = [
    {name = "Numba team", email = "na@na.na"}
]
license = {text = "BSD-2-Clause"}
readme = "README.md"
dependencies = [
    "numba_rvsdg",
    "egglog",
    "networkx",
    "llvmlite",
    "numpy",
]

[tool.black]
line-length = 79
target-version = ['py312']
